--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,10 @@ find_package(Eigen3 REQUIRED)
 add_subdirectory(extern)
 add_subdirectory(library)
 #<-------Stuff for directly building an Application----->
-#set(TEST_TARGET testmain)
-#add_executable(${TEST_TARGET} main.cpp )
-#target_link_libraries (${TEST_TARGET} graph Catch2)#Eigen3::Eigen Catch2 spdlog)# libdl)# pybind11)
-#target_compile_features(${TEST_TARGET} PUBLIC cxx_std_17)
+set(TEST_TARGET Example_XOR)
+add_executable(${TEST_TARGET} main.cpp )
+target_link_libraries (${TEST_TARGET} graph Eigen3::Eigen )# libdl)# pybind11)
+target_compile_features(${TEST_TARGET} PUBLIC cxx_std_17)
 #pybind11_add_module(pybindtest main.cpp)
 #add_executable(testpy testPython.py )
 
