Reactivated git submodules (Eigen,pybind11) and deactivated find_package(Eigen)

--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -25,8 +25,8 @@ endif()
 if(NOT EXISTS "${PROJECT_SOURCE_DIR}/extern/spdlog/CMakeLists.txt")
     message(FATAL_ERROR "Problems with submodule  spdlog.")
 endif()
-#add_subdirectory(eigen)
+add_subdirectory(eigen)
 add_subdirectory(Catch2)
-#add_subdirectory(pybind11)
+add_subdirectory(pybind11)
 add_subdirectory(spdlog)
 
