--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -27,7 +27,7 @@ if(NOT EXISTS "${PROJECT_SOURCE_DIR}/extern/spdlog/CMakeLists.txt")
 endif()
 add_subdirectory(eigen)
 add_subdirectory(Catch2)
-add_subdirectory(pybind11)
+#add_subdirectory(pybind11)
 add_subdirectory(spdlog)
 
 #//https://foonathan.net/blog/2016/07/07/cmake-dependency-handling.html <-- do this, see E-mail Tobias
