partly implemented backprop of convolve, push in order to get the newest version on laptop

--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -25,8 +25,25 @@ endif()
 if(NOT EXISTS "${PROJECT_SOURCE_DIR}/extern/spdlog/CMakeLists.txt")
     message(FATAL_ERROR "Problems with submodule  spdlog.")
 endif()
-add_subdirectory(eigen)
-add_subdirectory(Catch2)
+add_library(eigenI INTERFACE)
+target_include_directories(eigenI INTERFACE ${PROJECT_SOURCE_DIR}/extern/eigen/Eigen)
+
+add_library(catch2I INTERFACE)
+target_include_directories(catch2I INTERFACE ${PROJECT_SOURCE_DIR}/extern/Catch2/include)
+add_library(spdlogI INTERFACE)
+target_include_directories(spdlogI INTERFACE ${PROJECT_SOURCE_DIR}/extern/spdlog/include/spdlog)
+add_library(pybind11I INTERFACE)
+target_include_directories(pybind11I INTERFACE ${PROJECT_SOURCE_DIR}/extern/pybind11/include/pybind11)
+#
+#set(EIGEN_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/extern/eigen/Eigen CACHE PATH "eigen include directory")
+#set(install {CMAKE_CURRENT_SOURCE_DIR}/extern/eigenInstall)
+#install(DIRECTORY ${EIGEN_INCLUDE_DIR} DESTINATION  ${install})
+#add_library(eigenI INTERFACE)
+#target_include_directories(eigenI INTERFACE $<BUILD_INTERFACE:${FOO_INCLUDE_DIR}>
+#        $<INSTALL_INTERFACE:${install}>)
+#install(TARGETS eigenI EXPORT my_export_set DESTINATION ${install})
+##add_subdirectory(eigen)
+#add_subdirectory(Catch2)
 #add_subdirectory(pybind11)
 add_subdirectory(spdlog)
 
