--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,8 @@ target_compile_features(${TEST_TARGET_ONE_2} PUBLIC cxx_std_17)
 set(TEST_TARGET_TWO Example_MNIST)
 add_executable(${TEST_TARGET_TWO} Example_MNIST.cpp)
 #target_link_libraries (${TEST_TARGET_TWO} graph Eigen3::Eigen )# libdl)# pybind11)
-target_link_libraries (${TEST_TARGET_TWO} graph  )# libdl)# pybind11)
+target_link_libraries (${TEST_TARGET_TWO} graph mnist )# libdl)# pybind11)
+target_compile_definitions(${TEST_TARGET_TWO} PRIVATE MNIST_DATA_LOCATION="${CMAKE_SOURCE_DIR}/extern/mnist")
 
 target_compile_features(${TEST_TARGET_TWO} PUBLIC cxx_std_17)
 
