ConvolveFilter with IM2Col and COL2IM does work now!

--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -28,9 +28,13 @@ endif()
 if(NOT EXISTS "${PROJECT_SOURCE_DIR}/extern/mnist/MNISTConfig.cmake")
     message(FATAL_ERROR "Problems with submodule  mnist.")
 endif()
+find_package(OpenMP)
+
 add_library(eigenI INTERFACE)
 target_include_directories(eigenI INTERFACE ${PROJECT_SOURCE_DIR}/extern/eigen)
-
+if(OpenMP_CXX_FOUND)
+    target_link_libraries(eigenI INTERFACE  OpenMP::OpenMP_CXX)
+endif()
 add_library(catch2I INTERFACE)
 target_include_directories(catch2I INTERFACE ${PROJECT_SOURCE_DIR}/extern/Catch2/single_include)
 #target_include_directories(catch2I INTERFACE ${PROJECT_SOURCE_DIR}/extern/Catch2/internal)
