Huge Change in Computational Graph structure Update of Applications Update of TestCases Fix in im2Col in ColvolutionOP Added some Doxygen Descriptions in Computational Graph

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,11 @@
-image: elsa/ubu18-clang6:latest
 
 stages:
   - compile
 
 
 build-linux-gcc:
+  image: elsa/gcc:9
+
   stage: compile
   script:
     - mkdir -p build
@@ -20,6 +21,8 @@ build-linux-gcc:
       - build/
 
 build-linux-clang:
+  image: elsa/clang:8
+
   stage: compile
   script:
     - mkdir -p build
