--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,36 +1,48 @@
-image: elsa/ubu18-clang6:latest
-
 stages:
   - compile
+build-gcc9:
+  <<: *build_job_artifact
+    image: elsa/gcc:9
+      script:
+      - mkdir -p build
+      - cd build
+      - cmake ..
+      - make -j${nproc}
 
+      tags:
+        - linux
+        - elsa
+        - gcc
 
-build-linux-gcc:
-  stage: compile
-  script:
-    - mkdir -p build
-    - cd build
-    - cmake ..
-    - make
-    - ls
-  tags:
-    - linux
-  cache:
-    key: "$CI_JOB_NAME"
-    paths:
-      - build/
+      #image: elsa/ubu18-clang6:latest
 
-build-linux-clang:
-  stage: compile
-  script:
-    - mkdir -p build
-    - cd build
-    - cmake .. -DCMAKE_CXX_COMPILER=/usr/bin/clang++
-    - make
-    - ls
-  tags:
-    - linux
-  cache:
-    key: "$CI_JOB_NAME"
-    paths:
-      - build/
+      #build-linux-gcc:
+      #  stage: compile
+      #  script:
+      #    - mkdir -p build
+      #    - cd build
+      #    - cmake ..
+      #    - make
+      #    - ls
+      #  tags:
+      #    - linux
+      #  cache:
+      #    key: "$CI_JOB_NAME"
+      #    paths:
+      #      - build/
+      #
+      #build-linux-clang:
+      #  stage: compile
+      #  script:
+      #    - mkdir -p build
+      #    - cd build
+      #    - cmake .. -DCMAKE_CXX_COMPILER=/usr/bin/clang++
+      #    - make
+      #    - ls
+      #  tags:
+      #    - linux
+      #  cache:
+      #    key: "$CI_JOB_NAME"
+      #    paths:
+      #      - build/
       
