--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,10 +9,28 @@ build-gcc9:
     - cd build
     - cmake ..
     - make -j${nproc}
-
+  cache:
+    key: "$CI_JOB_NAME"
+    paths:
+      - build/
   tags:
     - linux
-    
+
+build-clang8:
+  stage: compile
+  image: elsa/clang:8
+  script:
+    - mkdir -p build
+    - cd build
+    - cmake .. -DCMAKE_CXX_COMPILER=/usr/bin/clang++
+    - make -j${nproc}
+  cache:
+      key: "$CI_JOB_NAME"
+      paths:
+        - build/
+  tags:
+    - linux
+
 
 
     #image: elsa/ubu18-clang6:latest
